# Gradu-projekti

./: README.md  artikkelit.txt  create_desktop_icon.sh  index.spec  kisu.txt  muistiinpanot.txt  pyproject.toml  setup.sh  tasks.py  todo.txt
new_src/: index.py  logic.py  plan.txt  textfields.py
new_src/interface/: assumption.py  edit_ui.py  pairless_frame.py  statement.py  ui.py  ui_handler.py
new_src/interface/frames/: formatting_frame.py  statement.py
old_src/: activity.py  change_layout.py  frames.py  index.desktop  kokeilu.py  textfields.py  ui.py
src/: activity.py  change_layout.py  edit_screen.py  functions.py  index.py  index.spec  logic.py  textfields.py  textfields_maker.py  todo.txt  ui.py
src/interface/: create_texts.py  edit_ui.py  ui_handler.py
src/interface/frames/: assumption.py  evidence_frame.py  formatting_frame.py  last_frame.py  pairless_frame.py  statement.py
src/todistusapp/: activity.py  change_layout.py  index.py  kokeilu.py  ui.py
