[project]
name = "graduprojekti"
version = "0.1.0"
description = ""
authors = [
    {name = "venlavanhala",email = "venla.e.vanhala@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "cowsay (>=6.1,<7.0)",
    "invoke (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
