[tool.poetry]
name = "todistusapp"
version = "0.1.0"
packages = [{include = "todistusapp", from = "src"}]

[tool.poetry.scripts]
todistusapp = "todistusapp.index:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cowsay = ">=6.1,<7.0"
invoke = ">=2.2.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
